# discord-caps-copy-paste

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SKILL.md
.github/workflows/: ci.yml  release.yml
agents/: openai.yaml
scripts/: build_release_assets.py  check.sh  fake_codex.sh  fake_tether.sh  run_docker_ui_test.sh
src/: lib.rs  main.rs
tests/ui/: Dockerfile  run_in_container.sh
